change postion of footer & button añadir pelicula (#7)

--- a/src/style.css
+++ b/src/style.css
@@ -748,7 +748,7 @@ nav button:hover {
    FOOTER - CENTRADO CORRECTAMENTE
 ========================================= */
 footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
     width: 100%;
